vpc-endpoint-clusters/cluster2/demo_app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster2-webserver
  labels:
    mesh: core-demomesh
    istio-injection: enabled
