vpc-endpoint-clusters/cluster2/demo_app/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cluster2-webserver-destination-rule
spec:
  host: api.cluster2-webserver.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: cluster2-webserver
